Thu Jun 12 12:17:52 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Stack_Trace.cpp:

          Corrected Win32 assembler compilation error.

Wed Jun 11 16:24:00 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added new test case.

Wed Jun 11 13:55:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Time_Value.inl:
        * ace/Time_Value.h:

          Add extra inline void msec(int) that calls void msec(long)
          to avoid amiguity between void msec(long) and void msec(_int64 &)
          when natual sized integers are given (which seems to be
          quite often).

Wed Jun 11 13:02:22 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * bin/PerlACE/Run_Test.pm:

          Replaced the "use PerlACE::Process".  It is necessary to be loaded
          inside this module to ensure that all of the command line options
          can be processed.

Wed Jun 11 04:17:42 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/platform.m4:

          Remove ACE_HAS_AIX_BROKEN_SOCKET_HEADER definitions.

Wed Jun 11 03:51:32 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_HAS_CHARPTR_SPRINTF.  This feature test macro is no longer
          used.

Wed Jun 11 03:39:48 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_LACKS_FLOATING_POINT.  This feature test macro is no longer
          used.

Wed Jun 11 03:33:31 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_HAS_TYPENAME_KEYWORD.  This feature test macro is no longer
          used.

Wed Jun 11 03:31:02 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
