@@ -52,8 +52,8 @@
  *        - Any platform using glibc as its runtime library, or where ACE_HAS_EXECINFO_H is defined 
  *          (this covers Linux and Mac) and gcc version >= 3.3.
  *        - VxWorks, both kernel and RTP
- *        - Solaris (not Sparc 64bits)
- *        - Windows 32 and 64 bit (not WinCE/mobile, not MinGW)  
+ *        - Solaris
+ *        - Windows 32 and 64 bit (Visual C++, excluding WinCE/mobile)
  *
  *  @note Since stack trace buffer size has limitation(@c ACE_STACK_TRACE_SYMBUFSIZ), you will not 
  *        get a complete stack trace if @c ACE_STACK_TRACE_SYMBUFSIZ value is less than actual stack 
