@@ -1,3 +1,13 @@
+Thu Jun 12 14:38:19 UTC 2008  Adam Mitz  <mitza@ociweb.com>
+
+        * ace/Stack_Trace.h:
+        * ace/Stack_Trace.cpp:
+
+          Added support for SPARCv9 (64-bit).
+          Reverted the Win32 assembly back to the simplest form, we had tried
+          to make it compatible with Borland but it still didn't work.  As of
+          now ACE compiled by Borland will not generate stack traces.
+
 Thu Jun 12 12:17:52 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
 
         * ace/Stack_Trace.cpp:
@@ -211,7 +221,7 @@ Tue Jun 10 18:46:24 UTC 2008  Yan Dai  <dai_y@ociweb.com>
 
           - Moved the label "x" from inside of asm to be outside. Some compiler
             does not like it.
-          - Enabled LynOS support and excluded support for gcc old versions before 3.3.
+          - Enabled LynxOS support and excluded support for gcc old versions before 3.3.
 
 Tue Jun 10 13:56:17 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
